[package]
name = "solana-coinflip-smart-contract"
version = "0.1.0"
description = "Solana coinflip game - Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_coinflip_smart_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
solana-program = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }