[package]
name = "solana-crash-smart-contract"
version = "0.1.0"
description = "Anchor crash game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_crash_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
